--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Wonderful Wedding</title>
+    <title>Aldian & Nadya Wedding</title>
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin="crossorigin"/>
     <link rel="preload" as="style" href="https://fonts.googleapis.com/css2?family=Dosis:wght@400;500&amp;display=swap"/>
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Dosis:wght@400;500&amp;display=swap" media="print" onload="this.media='all'"/>
@@ -54,12 +54,12 @@
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#ww-navbarNav" aria-controls="ww-navbarNav" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
       <div class="collapse navbar-collapse text-uppercase" id="ww-navbarNav">
         <ul class="navbar-nav ml-auto">
-          <li class="nav-item"><a class="nav-link smooth-scroll" href="#home">Home</a></li>
+          <!-- <li class="nav-item"><a class="nav-link smooth-scroll" href="#home">Home</a></li>
           <li class="nav-item"><a class="nav-link smooth-scroll" href="#couple">Couple</a></li>
           <li class="nav-item"><a class="nav-link smooth-scroll" href="#events">Events</a></li>
           <li class="nav-item"><a class="nav-link smooth-scroll" href="#people">People</a></li>
           <li class="nav-item"><a class="nav-link smooth-scroll" href="#gallery">Gallery</a></li>
-          <li class="nav-item"><a class="nav-link smooth-scroll" href="#rsvp">RSVP</a></li>
+          <li class="nav-item"><a class="nav-link smooth-scroll" href="#rsvp">RSVP</a></li> -->
         </ul>
       </div>
     </div>
@@ -77,7 +77,7 @@
         </div>
       </div>
       <div class="col-md-6">
-        <div class="mt-3"><img class="img-fluid" src="images/bride.jpg" alt="Bride" data-aos="flip-right" data-aos-duration="1000"/>
+        <div class="mt-3"><img class="img-fluid" src="images/nadya.jpeg" alt="Bride" data-aos="flip-right" data-aos-duration="1000"/>
           <p class="pt-3 text-left text-muted">Hi I am Nadya Rechtta Utami, a daughter of Mr. Rahmat and Mrs. Hindun.</p>
           <h3 class="h2 ww-title">Nadya</h3>
           <div class="ww-social-links"><a class="btn btn-link" href="#"><i class="fab fa-facebook-f" aria-hidden="true"></i></a><a class="btn btn-link" href="#"><i class="fab fa-twitter" aria-hidden="true"></i></a><a class="btn btn-link" href="#"><i class="fab fa-google-plus-g" aria-hidden="true"></i></a><a class="btn btn-link" href="#"><i class="fab fa-instagram" aria-hidden="true"></i></a></div>
